登录测试提交

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,21 @@
 appname = beego-study
 httpport = 8080
 runmode = dev
+#开启监控参数
 EnableAdmin = true
 AdminAddr   = "localhost"
 AdminPort   = 8088
+#定义数据库的的类型
+db_type = "mysql"
+#定义数据表前缀
+db_dt_prefix = "test_"
+#mysql的配置信息
+db_alias = "default"
+#数据库名
+db_name  = "beegotest"
+db_user  = "root"
+db_pwd	 = "123456"
+db_host  = "localhost"
+db_port  = "3306"
+db_charset = "utf8"
+
