--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,22 +1,27 @@
 appname = beego-study
 httpport = 8080
+#检测是否是开发者
 runmode = dev
 #开启监控参数
 EnableAdmin = true
-AdminAddr   = "localhost"
+AdminAddr   = "127.0.0.1"
 AdminPort   = 8088
-#定义数据库的的类型
-db_type = "mysql"
-#定义数据表前缀
-db_dt_prefix = "test_"
-#mysql的配置信息
-[mysql]
-db_alias = "default"
-#数据库名
-db_name  = "beegotest"
-db_user  = "root"
-db_pwd	 = "123456"
-db_host  = "localhost"
-db_port  = "3306"
-db_charset = "utf8"
+
+# MYSQL地址
+dbhost = localhost
+
+# MYSQL端口
+dbport = 3306
+
+# MYSQL用户名
+dbuser = root
+
+# MYSQL密码
+dbpassword =123456
+
+# MYSQL数据库名称
+dbname = beegotest
+
+# MYSQL表前缀
+dbprefix = test_
 
